# clean-folder

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/clean/: __init__.py  clean.py
src/file_janitor_725524.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
