[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file_janitor_725524"
version = "0.0.1"
authors = [
  { name="Vitaliy Dubrovin", email="vitaliy.dubrovin@gmail.com" },
]
description = "This is a file janitor package that will clean up the specified folder for you."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cherchel"
"Bug Tracker" = "https://github.com/cherchel/clean-folder"